# pfff

./: .gitignore  .merlin  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Main.ml  Makefile  Makefile.common  Makefile.old  README.md  changes.txt  configure  credits.txt  dune  find_source.ml  install.txt  install_linux.txt  install_macos.txt  install_windows.txt  main.ml  main_codegraph.ml  main_codegraph_build.ml  main_codemap.ml  main_codequery.ml  main_codeslicer.ml  main_db.ml  main_scheck.ml  main_sgrep.ml  main_spatch.ml  main_stags.ml  main_test.ml  opam.txt  pfff.opam  project.el  readme.txt  semgrep.yml  skip_list.txt
.circleci/: config.yml
.github/: pull_request_template.md
cli/: Main.ml  dune
code_graph/: Makefile  cairo_helpers3.ml  model3.ml  view3.ml  view_matrix.ml  view_overlays3.ml
code_map/: Makefile  cairo_helpers.ml  cairo_helpers.mli  completion2.ml  draw_labels.ml  draw_labels.mli  draw_legend.ml  draw_legend.mli  draw_macrolevel.ml  draw_macrolevel.mli  draw_microlevel.ml  draw_microlevel.mli  editor_connection.ml  editor_connection.mli  model2.ml  model2.mli  model_database_code.ml  model_graph_code.ml  parsing2.ml  style2.ml  ui_layers.ml  ui_navigation.ml  ui_search.ml  view2.ml  view_mainmap.ml  view_mainmap.mli  view_overlays.ml
commons/: Common.ml  Common.mli  Dumper.ml  Dumper.mli  Exception.mli  FPath.ml  FPath.mli  JSON.ml  Logging.ml  Logging.mli  Ls.ml  Ls.mli  META  Makefile  Makefile.common  OCaml.ml  OCaml.mli  Unit_commons.ml  authors.txt  common.ml  common.mli  common2.ml  common2.mli  copyright.txt  credits.txt  dumper.ml  dumper.mli  dune  file_type.ml  file_type.mli  map_.ml  oUnit.mli  ocaml.ml  ocaml.mli  set_.ml  set_.mli
commons_core/: META  Makefile  console.ml  console.mli  dune  features.ml.in  file_format.ml  graphic.ml  interfaces.ml  logger.ml  logger.mli  macro.ml4  parallel.ml  unit_commons_core.ml  unit_commons_core.mli
commons_ocollection/: META  Makefile  oarray.ml  oassoc.ml  oassoc_buffer.ml  oassocb.ml  oassoch.ml  objet.ml  ocollection.ml  ocollection.mli  ograph.ml  ograph2way.ml  ograph_extended.ml  ograph_extended.mli  ograph_simple.ml  ograph_simple.mli  osequence.ml  oset.ml  oset.mli  oseth.ml  setPt.ml  seti.ml
commons_wrappers/: Makefile
demos/: Makefile  analyze_chain.ml  php_transducer.ml  show_function_calls1.ml  show_function_calls2.ml  show_function_calls3.ml  show_function_class_names.ml  simple_code_search.ml  simple_git_metrics.ml  simple_refactoring.ml
globals/: Makefile  config_pfff.ml  config_pfff.ml.in
graph_code/: Makefile  dependencies_matrix_build.ml  dependencies_matrix_build.mli  dependencies_matrix_code.ml  dependencies_matrix_code.mli  dune  graph_code.ml  graph_code.mli  graph_code_checker.ml  graph_code_class_analysis.ml  graph_code_class_analysis.mli  graph_code_database.ml  (+12 more)
(+1201 files in other folders)
