opam-version: "2.0"
name: "pfff"
version: "0.39.5"
synopsis: "Tools and APIs for program analysis, code visualization, refactoring"
description: """
pfff is a set of tools and APIs to perform some static analysis,
dynamic analysis, code visualizations, code navigations, or
style-preserving source-to-source transformations such as refactorings
on source code. For now the effort is focused on Javascript and Python
but there is also good support for C, C++, Java, PHP, HTML, Css, and
preliminary support for Erlang, Go, C#, Lisp, Scheme, Haskell, Skip, Sql, and
even TeX. There is also very good support for OCaml and noweb
(literate programming) so that pfff can be used on the code of pfff
itself.

For more information see https://github.com/facebook/pfff/wiki/Main"""

maintainer: "yoann.padioleau@gmail.com"
authors: [ "Yoann Padioleau <yoann.padioleau@gmail.com>" ]
homepage: "https://github.com/facebook/pfff/wiki/Main"
bug-reports: "https://github.com/returntocorp/pfff/issues"
dev-repo: "git+https://github.com/returntocorp/pfff.git"

patches: [
]
build: [
  ["./configure" "--novisual" "--nocmt" "--nobytecode"]
  [make "depend"]
  [make]
  [make "opt"]
]
install: [
  [make "install-libs"]
]
depends: [
  "ocaml" {>= "4.05.0" & < "4.09.0"}
  "ocamlfind" {build}
  "camlp4"
  "num"
  "ocamlgraph"
  "json-wheel"
  "conf-perl"
  "menhir"
  "grain_dypgen"
]
